# For more specified changelog, check git log.

v4.0
	* Re-implemented mdev support, new kernel boot option 'mdev' to force mdev+tmpfs instead of devtmpfs even if available.
	* use() now can execute command.
	* get_device replaced with resolve_device function.
	* Experimental raid support.
	* Removed deprecented /config file support.
	* Code cleanup, most of code is now in functions file.
	* emount() and eumount() functions.
	* We no longer executing vgscan, vgchange will do it for us.


v0.3
	* rescueshell now is more like rescueshell...
	* rootdelay from now on accept only numbers, feature from ac1965.
	* Massive cleanup, all 'empty' files and dirs are created while booting.
	* Support for LABEL and UUID based root and enc_root variables, thanks to ac1965 and his code example with findfs.
	* Support for DEVTMPFS by default, if it fail to mount, fallback to old mdev mechanism (devtmpfs idea from ac1965's fork).
	* Some code cleanups (thanks to ac1965)
	* Option 'dmcrypt_root=true' was replaced with 'luks'
	* Option 'lvm=true' was replaced with 'lvm'
	* Option 'tuxonice_resume=true' was replaced with 'tuxonice'
	* Option 'rescueshell=true' wqas replaced with 'rescueshell'
