@@ -4,7 +4,6 @@
 * When there is luks enabled, but not lvm and there is no root=, use /dev/mapper/enc_root
 * Support for squashfs in root variable, example: root=SQUASHFS=livecd.img
 * Support for aufs2-based rootfs (livesystem). Useful for debuging and liveUSB/CD.
-* Write musthave() function to ensure that $1 variable is non-empty.
 * Support for keymaps.
 * Support BTRFS's subvolumes.
 * Remove unnecessary bashism from code.
